@@ -6,8 +6,8 @@ foo:
 	tbegin	4000(%r6),65000
 	tbeginc	4000(%r6),65000
 	tend
-	bpp	10,-20000,4000(%r6)
-	bprp	10,-2000,-80000
+	bpp	10,.,4000(%r6)
+	bprp	10,.,-80000
 	niai	10,13
 	lat	%r6,-5555(%r7,%r8)
 	lgat	%r6,-5555(%r7,%r8)
